--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-6.97MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.66MB/s(Youtube:不良林), server: 193.108.118.79, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-292.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-5.09MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-161.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.15MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-6.81MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.17MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-10.08MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-584.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-419.0KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 未知国家-473.2KB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-765.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.08MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-584.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 未知国家-473.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
