--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-5.09MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-161.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.15MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-419.0KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 未知国家-473.2KB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇬🇧 英国-932.3KB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇭🇰 香港-7.54MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 45.78.5.246, port: 51366, type: ss, cipher: aes-256-gcm, password: ERyG9Y6LA7}
+  - {name: 🇭🇰 香港-13.26MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇺🇸 美国-521.9KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.60MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-506.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-451.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇯🇵 日本-3.10MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇭🇰 香港-419.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-338.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
-      - 未知国家-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-932.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
